allprojects {
  apply plugin: 'java'
  apply plugin: 'idea'

  group 'org.grails.plugins'
  version '0.6.0-SNAPSHOT'

  sourceCompatibility = 1.7
  targetCompatibility = 1.7
  
  ext {
    grailsVersion = rootProject.grailsVersion
    gradleWrapperVersion = rootProject.gradleWrapperVersion
    camundaVersion = System.getProperty("camunda-bpm.version") ?: rootProject.camundaVersion
    spockVersion = rootProject.spockVersion
  }
  
  repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://repo.grails.org/grails/core" }
    maven { url "https://app.camunda.com/nexus/content/groups/public" }
  }

  dependencies {
    compile "org.grails:grails-core:$grailsVersion"
    compile("org.camunda.bpm:camunda-engine:$camundaVersion") {
      exclude(group: 'org.springframework', module: 'spring-beans')
    }
    compile("org.camunda.bpm:camunda-engine-spring:$camundaVersion") {
      exclude(group: 'org.springframework', module: 'spring-context')
      exclude(group: 'org.springframework', module: 'spring-jdbc')
      exclude(group: 'org.springframework', module: 'spring-orm')
    }
  }

  test {
    jvmArgs "-XX:MaxPermSize=256m"
  }
  
}
